while creating slider

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -41,7 +41,8 @@
         "sass/components/_buttons.scss",
         "sass/components/_dropdown.scss",
         "sass/components/_navigation.scss",
-        "sass/components/_inputs.scss"
+        "sass/components/_inputs.scss",
+        "sass/components/_slider.scss"
       ]
     }
   ],
