add some section to main page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,6 +38,7 @@
         "sass/layout/_sidebar.scss",
         "sass/layout/_forms.scss",
         "sass/layout/_navbar.scss",
+        "sass/layout/_aboutus.scss",
         "sass/components/_buttons.scss",
         "sass/components/_dropdown.scss",
         "sass/components/_navigation.scss",
