--- a/prepros-6.config
+++ b/prepros-6.config
@@ -40,6 +40,7 @@
         "sass/layout/_navbar.scss",
         "sass/layout/_aboutus.scss",
         "sass/layout/_offer.scss",
+        "sass/components/_flyingicons.scss",
         "sass/components/_buttons.scss",
         "sass/components/_dropdown.scss",
         "sass/components/_navigation.scss",
