--- a/prepros-6.config
+++ b/prepros-6.config
@@ -41,7 +41,8 @@
         "sass/layout/_aboutus.scss",
         "sass/layout/_offer.scss",
         "sass/layout/_references.scss",
-        "sass/layout/_contact.scss",
+        "sass/layout/_download-contact.scss",
+        "sass/layout/_materials.scss",
         "sass/components/_flyingicons.scss",
         "sass/components/_buttons.scss",
         "sass/components/_dropdown.scss",
