try to make own

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -39,21 +39,20 @@
         "sass/layout/_forms.scss",
         "sass/layout/_navbar.scss",
         "sass/layout/_aboutus.scss",
-        "sass/layout/_offer.scss",
+        "sass/layout/_contact.scss",
         "sass/layout/_references.scss",
         "sass/layout/_download-contact.scss",
         "sass/layout/_materials.scss",
         "sass/components/_flyingicons.scss",
         "sass/components/_buttons.scss",
         "sass/components/_dropdown.scss",
-        "sass/components/_navigation.scss",
         "sass/components/_inputs.scss",
         "sass/components/_slider.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
